<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MythicalLogistics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quote_button_text">Get Quote</string>
    <string name="app_title">Mythical Logistics</string>
    <string name="title_activity_quote">QuoteActivity</string>
    <string name="get_quote_title">Get Quote</string>

    <string-array name="object_types">
        <item>Crate</item>
        <item>Box</item>
        <item>Parcel</item>
        <item>Pallet</item>
    </string-array>
    <string-array name="service_types">
        <item>Air</item>
        <item>PriorityAir</item>
        <item>Ground</item>
        <item>PriorityGround</item>
        <item>Ship</item>
    </string-array>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_shipment">ShipmentActivity</string>
    <string name="shipment_button_text">Get Shipment</string>
    <string name="settings_button_text">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_show_quote">ShowQuoteActivity</string>
    <string name="basepath_setting">API Endpoint</string>
    <string name="settings_ok">Ok</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_save">Save</string>
    <string name="show_quote_title">Your Quote</string>
    <string name="quote_accept">Accept</string>
    <string name="quote_cancel">Some other time</string>
    <string name="title_activity_show_shipment">ShowShipmentActivity</string>
    <string name="show_shipment_title">Shipment on its way</string>
    <string name="get_status_button_text">Get Status</string>
    <string name="get_shipment_title">Get Shipment</string>
    <string name="account_number_setting">Account Number</string>
    <string name="action_main">Main Page</string>

</resources>
